qcer style in tabs and global view

--- a/client/views/partials/ldView.html
+++ b/client/views/partials/ldView.html
@@ -142,8 +142,8 @@
                                         class="icon-th-large icon-white"></i> {{ child.org_label}}</span>
                             </div>
                             <div class="actLabel" ng-show="child.group_child_type=='LD'">
-                                <span class="timeLabel"><i class="icon-time icon-white"></i>{{ child.scope}}</span>
-                                <span ng-repeat="qcer in child.qcers" class="orgLabel"><i class="icon-flag icon-white"></i>{{ qcer.qcer_name }}</span>
+                                <span class="timeLabel"><i class="icon-time icon-white"></i> {{ child.scope}}</span>
+                                <span class="orgLabel"><i class="icon-flag icon-white" ng-show="child.qcers"></i> <span ng-repeat="qcer in child.qcers">{{ qcer.qcer_name }} </span></span>
                             </div>
                         </a>
                     </div>
@@ -161,7 +161,7 @@
                     </div>
                     <div class="actLabel" ng-show="node.type=='LD'">
                         <span class="timeLabel"><i class="icon-time icon-white"></i>{{ node.scope }}</span>
-                        <span ng-repeat="qcer in node.qcers" class="orgLabel"><i class="icon-flag icon-white"></i> {{ qcer.qcer_name }}</span>
+                        <span class="orgLabel"><i class="icon-flag icon-white" ng-show="node.qcers"></i> <span ng-repeat="qcer in node.qcers" >{{ qcer.qcer_name }} </span></span>
                     </div>
                 </a>
                 </div>
