--- a/client/views/partials/home.html
+++ b/client/views/partials/home.html
@@ -1,9 +1,9 @@
 <div id="ldlist" class="row top-margin zeroLeft">
-
     <!-- LD BOX START -->
-    <div ng-repeat="learningDesign in learningDesigns | orderBy:'ld_last_edit_date':true" class="ld-border ld-item">
+    <div ng-repeat="learningDesign in learningDesigns | orderBy:'ld_last_edit_date':true" class="ld-border ld-item"
+         ng-show="learningDesign.ld_publication==1">
         <div class="ld-top">
-            <!-- FIXME: convert static data to dynamic -->
+            <!-- FIXME: convert qcer static data to dynamic -->
             <div class="qcer">A1, A2, B1, B2, C1, C2</div>
             <div class="scope">
                 {{ learningDesign.ld_scope }}
@@ -15,18 +15,17 @@
         </div>
         <div class="ld-bottom">
             <div class="authorName">
-            <a ng-href="#" > {{ learningDesign.user_name }}&nbsp;{{ learningDesign.user_last_name
-                }} </a>
+                <!-- FIXME: add dynamic link to LD author profile page -->
+                <a ng-href="#"> {{ learningDesign.user_name }}&nbsp;{{ learningDesign.user_last_name
+                    }} </a>
             </div>
-<!-- TODO: Like button. If the LD is already liked, put class 'liked'. Else, put class 'likes'.-->
+            <!-- TODO: Like button. If the LD is already liked, put class 'liked'. Else, put class 'likes'.-->
             <div class="likes">
                 <!-- TODO: Like button. If the LD is already liked, add class 'icon-white'.-->
-            <a ng-href="#" >Like <i class="icon-thumbs-up"></i></a>
+                <a ng-href="#">Like <i class="icon-thumbs-up"></i></a>
             </div>
         </div>
     </div>
     <!-- LD BOX END -->
-
 </div><!-- row -->
-
 </div>
