--- a/client/views/partials/ldView.html
+++ b/client/views/partials/ldView.html
@@ -119,7 +119,7 @@
                     <!-- Children are also in levels: Create unstyled div for each level -->
                     <div ng-repeat="(childLevel, subChildren) in node.children">
                         <div ng-repeat="child in subChildren" ng-class="getGroupBoxClass(child)">
-                            <a class="whiteText" ng-click="open()"><h6 class="actName">{{
+                            <a class="whiteText" ng-click="open(child.group_child_name)"><h6 class="actName">{{
                                 child.group_child_name }}</h6>
 
                                 <div class="actLabel" ng-show="child.group_child_type!='LD'">
@@ -138,7 +138,7 @@
                     </div>
                     <!-- End Children -->
                     <!-- If it's NOT a group:  -->
-                    <div ng-show="!node.children" class="actName"><a class="whiteText" ng-click="open()">
+                    <div ng-show="!node.children" class="actName"><a class="whiteText" ng-click="open(node.node_name)">
                         <h6>{{ node.node_name }}</h6>
 
                         <div class="actLabel" ng-show="node.type!='LD'">
@@ -169,8 +169,7 @@
 
                     <!-- BEGIN DYNAMIC ACTIVITY CONTENT (Modal) -->
                     <div ng-repeat="(level, nodes) in levels">
-                        <!-- FIXME: convert static filter to dynamic -->
-                        <div ng-repeat="node in nodes |   filter:node.node_name = 'Support Activity 1'"
+                        <div ng-repeat="node in nodes |   filter:node.node_name = nameSelected"
                              class="nodeTextDetails">
                             <!-- If it's a group:  -->
                             <div ng-show="node.children" class="groupBoxText">
