--- a/client/views/partials/ldView.html
+++ b/client/views/partials/ldView.html
@@ -105,7 +105,7 @@
                 <h4 class="inline">{{learningDesign.ld_name }}</h4>
             </div>
             <div class="titleRight">
-                <h4><span ng-repeat="qcer in learningDesign.qcers" class="round">{{ qcer.qcer_name }}</span> {{ learningDesign.ld_scope }}</h4>
+                <h4><span ng-repeat="qcer in learningDesign.qcers" class="round qceritem">{{ qcer.qcer_name }}</span> {{ learningDesign.ld_scope }}</h4>
             </div>
         </div>
         <div id="tabContent">
